# ros2_wsn

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/LLM-Robot/share/LLM-Robot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/LLM-Robot/share/LLM-Robot/cmake/: LLM-RobotConfig.cmake
install/control_systems/lib/control_systems/: goal_linear  goal_planner
install/control_systems/share/control_systems/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_systems/share/control_systems/cmake/: control_systemsConfig.cmake
install/control_systems/share/control_systems/launch/: velocity_controller.launch.py
install/control_systems/share/control_systems/urdf/: diff_drive_vel.urdf
install/robot_sensing/lib/robot_sensing/: line_following  maze_lidar  odom_kinematic  point_cloud_segmentation
install/robot_sensing/share/robot_sensing/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_sensing/share/robot_sensing/cmake/: robot_sensingConfig.cmake
install/sensor_fusion/lib/sensor_fusion/: linear_kf
install/sensor_fusion/share/ament_index/resource_index/parent_prefix_path/: sensor_fusion
install/sensor_fusion/share/sensor_fusion/: package.sh  package.zsh
install/sensor_fusion/share/sensor_fusion/config/: kf.rviz  tb3_ekf.yaml
install/sensor_fusion/share/sensor_fusion/launch/: linear_kf.launch.py
log/: latest_build  latest_list
src/LLM-Robot/: CMakeLists.txt
src/control_systems/: CMakeLists.txt
src/control_systems/config/: control.perspective  diff_controller.yaml
src/control_systems/src/: goal_linear.cpp  goal_planner.cpp
src/control_systems/urdf/: diff_drive_vel.urdf
src/robot_sensing/: .853dd28e2f1aa6d4dae73f870a3c0876eb8bbe5.cam  .ab77d7c6c14e40e5501cf720cd6c015231624e71.cam  .dbe388cfbfdf2a1ddaf81f59c3443a908b2c3277.cam  CMakeLists.txt  circle.pcd  package.xml  simple.pcd
src/robot_sensing/bag/rosbag2_2024_07_31-11_57_58/: metadata.yaml  rosbag2_test.db3
src/robot_sensing/launch/: line_world.launch.py  maze_world.launch.py
src/robot_sensing/models/line_track/: model.sdf
src/robot_sensing/models/maze/: model.sdf
src/robot_sensing/src/: linefollowing.cpp  maze_solving_with_lidar.cpp  odom_kinematic.cpp  point_cloud_segmentation.cpp
src/robot_sensing/world/: linefollowing.world  maze.world
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/config/: kf.rviz
src/sensor_fusion/launch/: linear_kf.launch.py  tb3_ekf.launch.py
src/sensor_fusion/src/: advanced_kf.cpp  linear_kf.cpp  noise_kf.cpp
